<resources>
    <string name="app_name">FarmerSp</string>
    <string name="login_with_your_account">Chào mừng đến với farmsp</string>
    <string name="your_name">Tên của bạn</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="need_new_account">Cần một tài khoản mới?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_hint_thumua">Tìm kiếm tin thu mua</string>
    <!-- OnBoard Screen. -->

    <string name="ob_header1">TÌM KIẾM</string>
    <string name="ob_header2">GIAO DỊCH</string>
    <string name="ob_header3">LỢI NHUẬN</string>

    <string name="ob_get_started">KHÁM PHÁ NGAY</string>

    <string name="ob_desc1">Tìm kiếm thương lái uy tín, thu mua với giá cao nhất</string>
    <string name="ob_desc2">Bán nông sản cho thương lái với giá tốt nhất</string>
    <string name="ob_desc3">Thu về lợi nhuận để tăng thu nhập và cải thiện đời sống</string>
    <string name="title_activity_main_tl">Thương lái</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
