<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.uytai.farmersp.mvp.register.RegisterActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/register_toolbar"/>
    <ImageView
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="20dp"
        android:id="@+id/imgmain"
        android:src="@drawable/logo_design"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/imgmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorMain"
        android:textStyle="bold"
        android:text="Đăng ký tài khoản" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_trader_item"
        android:layout_below="@+id/textView"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/signup_name">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_trader_item"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup_name"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/signup_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_trader_item"
        android:layout_below="@+id/signup_username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/signup_password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_word"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/signup_password"
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity=""
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/signup_nongdan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="Nông dân"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/signup_thuonglai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="Thương lái"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/signup_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/colorMain"
        android:layout_below="@+id/layout_1"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="Xác nhận"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>
